add people management page(grid). add glide to show image from url

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_device">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_device"
         android:name="com.ulsee.thermalapp.ui.device.ListFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_device"
         tools:layout="@layout/fragment_device_list" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.ulsee.thermalapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_people"
+        android:name="com.ulsee.thermalapp.ui.people.GridFragment"
+        android:label="@string/title_people"
+        tools:layout="@layout/fragment_people_grid" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.ulsee.thermalapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_settings"
+        android:name="com.ulsee.thermalapp.ui.settings.SettingsFragment"
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
