--- a/app/src/main/res/layout/item_list_people.xml
+++ b/app/src/main/res/layout/item_list_people.xml
@@ -15,6 +15,7 @@
 
     <TextView
         android:id="@+id/textView_peopleName"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:lines="1"
