完成裝置管理、修正 Device List 項目下方陰影被切掉、Calibration 圖片半透明化、修改nav icon、starter頁面美化

--- a/app/src/main/res/layout/activity_device_starter.xml
+++ b/app/src/main/res/layout/activity_device_starter.xml
@@ -4,18 +4,34 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="+ 立即新增第一個裝置">
+        android:layout_marginBottom="50dp"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    </Button>
+        <ImageButton
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_add"
+            android:background="@null">
+        </ImageButton>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:text="立即新增第一個裝置">
+
+        </TextView>
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
