--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_device"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/nav_device"
         android:title="@string/title_device" />
 
     <item
         android:id="@+id/navigation_people"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/nav_people"
         android:title="@string/title_people" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/nav_settings"
         android:title="@string/title_settings" />
 
 </menu>
