--- a/app/src/main/res/layout/activity_people_editor.xml
+++ b/app/src/main/res/layout/activity_people_editor.xml
@@ -24,6 +24,7 @@
 
             <ImageButton
                 android:id="@+id/button_delete"
+                android:visibility="gone"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
