--- a/app/src/main/res/layout/fragment_settings_numberpad.xml
+++ b/app/src/main/res/layout/fragment_settings_numberpad.xml
@@ -15,14 +15,39 @@
         app:layout_constraintDimensionRatio="1"
         android:background="@drawable/shape_circle">
 
+        <ImageButton
+            android:id="@+id/imageButton_up"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@null"
+            android:src="@drawable/ic_arrow_up"></ImageButton>
+
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton_up"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton_down"
             android:textAlignment="center"
             android:background="@android:color/transparent"
             >
         </EditText>
+
+
+        <ImageButton
+            android:id="@+id/imageButton_down"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@null"
+            android:src="@drawable/ic_arrow_down"></ImageButton>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
