--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -122,7 +122,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:textColor="#fff"
-        android:background="@drawable/shape_bg_button">
+        android:background="#40C4F6">
 
     </Button>
 
