--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/gray">
+                    android:background="#ccc">
                 </ImageView>
 
                 <ImageView
