--- a/app/src/main/res/layout/activity_device_calibration.xml
+++ b/app/src/main/res/layout/activity_device_calibration.xml
@@ -60,4 +60,18 @@
             android:layout_height="wrap_content"></ImageView>
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:text="@string/save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="60dp"
+        android:textColor="#fff"
+        android:background="@drawable/shape_bg_button">
+    </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
