--- a/app/src/main/res/layout/activity_device_streaming.xml
+++ b/app/src/main/res/layout/activity_device_streaming.xml
@@ -4,7 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <com.ulsee.thermalapp.ui.device.StreamingSurfaceView
+        android:id="@+id/surfaceView"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <ImageView
+        android:visibility="gone"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
