--- a/app/src/main/res/layout/activity_tutorial_step1.xml
+++ b/app/src/main/res/layout/activity_tutorial_step1.xml
@@ -4,6 +4,45 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentInsetLeft="0dp"
+        android:contentInsetStart="0dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        android:contentInsetRight="0dp"
+        android:contentInsetEnd="0dp"
+        app:contentInsetRight="0dp"
+        app:contentInsetEnd="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Step 1"
+                android:textColor="#FF40C4F6"
+                android:textSize="24sp">
+            </TextView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#40C4F6"
+                android:layout_alignParentBottom="true">
+            </View>
+        </RelativeLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
+
     <Button
         android:id="@+id/button_next"
         android:layout_width="match_parent"
