--- a/app/src/main/res/layout/activity_tutorial_step1.xml
+++ b/app/src/main/res/layout/activity_tutorial_step1.xml
@@ -43,6 +43,13 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/tutorial_1"></ImageView>
+
     <Button
         android:id="@+id/button_next"
         android:layout_width="match_parent"
