--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -8,54 +8,83 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="10dp"
+
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp">
+
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="0dp">
 
             <RelativeLayout
                 android:id="@+id/layout_header"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="28dp">
-                <TextView
-                    android:id="@+id/textView_deviceName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="asdfdsaf"></TextView>
-                <View
-                    android:id="@+id/view_connected"
-                    android:visibility="gone"
-                    android:layout_width="8dp"
-                    android:layout_height="8dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/textView_deviceName"
-                    android:layout_marginStart="8dp"
-                    android:background="@android:color/holo_green_light"></View>
-
-                <View
-                    android:id="@+id/view_not_connected"
-                    android:layout_width="8dp"
-                    android:layout_height="8dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/textView_deviceName"
-                    android:layout_marginStart="8dp"
-                    android:background="@android:color/holo_red_dark"></View>
-
-                <ImageButton
-                    android:id="@+id/btn_menu"
+                android:layout_height="38dp">
+                <LinearLayout
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_more"
-                    android:background="@null"
-                    android:layout_alignParentEnd="true">
+                    android:orientation="horizontal"
+                    android:gravity="center">
 
-                </ImageButton>
+                    <TextView
+                        android:id="@+id/textView_deviceName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="asdfdsaf"></TextView>
+                    <View
+                        android:id="@+id/view_connected"
+                        android:visibility="gone"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/textView_deviceName"
+                        android:layout_marginStart="8dp"
+                        android:background="@android:color/holo_green_light"></View>
+
+                    <View
+                        android:id="@+id/view_not_connected"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/textView_deviceName"
+                        android:layout_marginStart="8dp"
+                        android:background="@android:color/holo_red_dark"></View>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/layout_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="center"
+                    android:paddingTop="20dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="more">
+
+                    </TextView>
+                    <ImageButton
+                        android:id="@+id/btn_menu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_more"
+                        android:background="@null">
+                    </ImageButton>
+                </LinearLayout>
             </RelativeLayout>
 
             <RelativeLayout
