--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Flip Horizontal"></TextView>
+            android:text="Fever Notification"></TextView>
 
         <Switch
             android:layout_width="wrap_content"
