refactory device settingActivity. use fragment

--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -41,134 +41,10 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
-        android:id="@+id/segmentedButton"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:elevation="2dp"
-        android:background="@android:color/white"
-        app:borderColor="@color/colorPrimary"
-        app:borderWidth="1dp"
-        app:divider="@android:color/transparent"
-        app:dividerPadding="10dp"
-        app:dividerWidth="1dp"
-        app:position="0"
-        app:radius="30dp"
-        app:ripple="true"
-        app:rippleColor="#eee"
-        app:selectedBackground="@color/colorPrimary">
-
-        <com.addisonelliott.segmentedbutton.SegmentedButton
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="10dp"
-            app:drawableGravity="top"
-            app:selectedTextColor="@android:color/white"
-            app:text="°C"
-            app:textColor="@color/colorPrimary" />
-
-        <com.addisonelliott.segmentedbutton.SegmentedButton
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="10dp"
-            app:drawableGravity="top"
-            app:selectedTextColor="@android:color/white"
-            app:text="°F"
-            app:textColor="@color/colorPrimary" />
-    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
-
-    <LinearLayout
-        android:id="@+id/layout_numberpad"
-        android:layout_width="300dp"
-        app:layout_constraintTop_toBottomOf="@+id/segmentedButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:fitsSystemWindows="true">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            style="@style/Widget.MaterialComponents.TabLayout.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:tabTextColor="?attr/colorPrimaryDark"
-            app:tabIndicatorColor="@color/colorPrimary"
-            app:tabIndicatorHeight="4dp"
-            android:background="@android:color/transparent"/>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    </LinearLayout>
-
-    <LinearLayout
-        app:layout_constraintTop_toBottomOf="@+id/layout_numberpad"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_facerecognition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="Face Recognition"
-            android:background="@android:color/white">
-        </androidx.appcompat.widget.SwitchCompat>
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_flipimage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="Flip Image"
-            android:background="@android:color/white">
-        </androidx.appcompat.widget.SwitchCompat>
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_onlyroi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="Only ROI"
-            android:background="@android:color/white">
-
-        </androidx.appcompat.widget.SwitchCompat>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/button_save"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="@string/save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="60dp"
-        android:textColor="#fff"
-        android:background="#40C4F6">
-    </Button>
+        android:layout_height="wrap_content"></FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
