--- a/app/src/main/res/layout/activity_device_streaming.xml
+++ b/app/src/main/res/layout/activity_device_streaming.xml
@@ -61,11 +61,10 @@
 
     <com.ulsee.thermalapp.ui.device.StreamingSurfaceView
         android:id="@+id/surfaceView"
-
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintDimensionRatio="1.3333"/>
 
     <ImageView
         android:visibility="gone"
@@ -73,6 +72,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"></ImageView>
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/surfaceView"
+        app:layout_constraintBottom_toBottomOf="parent"></FrameLayout>
 
     <Button
         android:id="@+id/button_next"
