--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/title_people" />
 
     <item
+        android:id="@+id/navigation_notification"
+        android:icon="@drawable/ic_notifications_none_black_24dp"
+        android:title="@string/title_notification" />
+
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/nav_settings"
         android:title="@string/title_settings" />
