--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_people_grid" />
 
     <fragment
+        android:id="@+id/navigation_notification"
+        android:name="com.ulsee.thermalapp.ui.notification.ListFragment"
+        android:label="@string/title_notification"
+        tools:layout="@layout/fragment_notification_list" />
+
+    <fragment
         android:id="@+id/navigation_settings"
         android:name="com.ulsee.thermalapp.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
