--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,10 +17,11 @@
             android:layout_height="wrap_content"
             android:text="Fever Notification"></TextView>
 
-        <Switch
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_notification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"></Switch>
+            android:layout_alignParentEnd="true"></androidx.appcompat.widget.SwitchCompat>
 
     </RelativeLayout>
 
