--- a/app/src/main/res/layout/activity_tutorial_step1.xml
+++ b/app/src/main/res/layout/activity_tutorial_step1.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -44,6 +45,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -52,6 +54,7 @@
 
     <Button
         android:id="@+id/button_next"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/next"
