--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -101,6 +101,7 @@
                 </ImageView>
 
                 <TextView
+                    android:id="@+id/textView_hint"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="16dp"
