--- a/app/src/main/res/layout/fragment_device_setting.xml
+++ b/app/src/main/res/layout/fragment_device_setting.xml
@@ -131,6 +131,7 @@
 
             <Button
                 android:id="@+id/button_save"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:text="@string/save"
