--- a/app/src/main/res/layout/fragment_settings_numberpad.xml
+++ b/app/src/main/res/layout/fragment_settings_numberpad.xml
@@ -26,16 +26,32 @@
             android:background="@null"
             android:src="@drawable/ic_arrow_up"></ImageButton>
 
-        <EditText
-            android:id="@+id/editText"
+<!--        <EditText-->
+<!--            android:id="@+id/editText"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/imageButton_up"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/imageButton_down"-->
+<!--            android:textAlignment="center"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:editable="false"-->
+<!--            android:enabled="false"-->
+<!--            >-->
+<!--        </EditText>-->
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/imageButton_up"
             app:layout_constraintBottom_toTopOf="@+id/imageButton_down"
             android:textAlignment="center"
+            android:gravity="center"
+            android:textColor="#000"
             android:background="@android:color/transparent"
+            android:editable="false"
+            android:enabled="false"
             >
-        </EditText>
+        </TextView>
 
 
         <ImageButton
