--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -123,7 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="16dp"
-                    android:text="裝置已經連線\n點擊可觀看即時畫面"
+                    android:text="@string/device_connected_click_to_watch_camera"
                     android:textColor="#000">
                 </TextView>
 
